fixed spacing

--- a/style.css
+++ b/style.css
@@ -112,14 +112,14 @@ body.main-page {
 
 .icon-wrapper.envelope {
   top: 30px;
-  left: -15%;
+  left: -20%;
   width: 70vw;
   z-index: 1;
 }
 
 .icon-wrapper.camera {
   top: 60px;
-  left: 25%;
+  left: 23%;
   width: 60vw;
   z-index: 2;
 }
